[workspace]

members = ["contracts/cw721-marketplace", "contracts/cw721-marketplace-single-collection", "contracts/cw721-marketplace-permissioned", "cw721-marketplace-utils"]
resolver = "2"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
cosmwasm-schema = "~1.0.0"
cw-multi-test = "0.13.4"
cosmwasm-std = "~1.5.0"
cosmwasm-storage = "~1.0.0"
cw-storage-plus = "0.14"
cw2 = "0.12"
cw20 = { version = "0.13.4" }
cw20-base = "0.13.4"
cw721-base = "0.13.4"
cw721 = "0.13.4"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"
rstest = "0.18.2"

[workspace.metadata.scripts]
schema = """
cargo run --example schema --manifest-path ./contracts/cw721-marketplace/Cargo.toml &&
cargo run --example schema --manifest-path ./contracts/cw721-marketplace-permissioned/Cargo.toml &&
cargo run --example schema --manifest-path ./contracts/cw721-marketplace-single-collection/Cargo.toml
"""
optimize = """docker run --rm -v "$(pwd)":/code \
  -e CARGO_TERM_COLOR=always \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.15.1
"""