[package]
name = "cw721-marketplace-utils"
version = "0.1.5"
authors = [
  "Drew Taylor <drew.taylor@philabs.xyz>",
  "Guy Garcia <guy.garcia@philabs.xyz>",
]

edition = "2021"

[dependencies]
cosmwasm-std.workspace = true
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true
cw20.workspace = true